--- a/errorByte/l10n.yaml
+++ b/errorByte/l10n.yaml
@@ -1,3 +1,3 @@
 arb-dir: assets/langs
 template-arb-file: app_en.arb
-output-localization-file: app_localizations.dart
+# output-localization-file: app_localizations.dart
